# Faster

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Makefile  README.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml
docs/: minio-comparison.md
examples/: basic_benchmark.rs
examples/docker/: .env.example  docker-compose.cluster.yml  docker-compose.single.yml
scripts/: fs-common.sh  fs-delete.sh  fs-get.sh  fs-health.sh  fs-put.sh
src/: config.rs  error.rs  main.rs  state.rs
src/api/: mod.rs
src/auth/: mod.rs
src/metadata/: engine.rs  mod.rs
src/metrics/: mod.rs
src/replication/: mod.rs
src/storage/: crypto.rs  engine.rs  mod.rs
src/types/: mod.rs
