[package]
name = "fasterstore"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "High-performance, single-binary object storage inspired by S3/MinIO"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
blake3 = "1.8"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1.2"
http-body-util = "0.1"
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.20"
percent-encoding = "2.3"
prometheus = "0.14"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["limit", "timeout"] }
tower-http = { version = "0.6", features = ["compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.12", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3.16"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
